[package]
name = "kf1"
version = "0.1.0"
authors = ["rkr35 <rkr35@dragons.drexel.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "minwindef", "processthreadsapi", "winnt"] }