[package]
name = "kf1"
version = "0.1.0"
authors = ["rkr35 <rkr35@dragons.drexel.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
simplelog = "0.9"
thiserror = "1.0"
winapi = { version = "0.3", features = ["consoleapi", "libloaderapi", "minwindef", "processthreadsapi", "wincon", "winnt"] }